// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <div
        data-slot="sidebar.brand.action"
        style="display: contents;"
      />
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <img
          alt=""
          aria-hidden="true"
          class="railFish"
          draggable="false"
          height="24"
          src="/sterling-icon.png"
          style="display: block; flex: 0 0 auto; width: 24px; height: 24px; border-radius: 4px; object-fit: cover;"
          width="24"
        />
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          style="display: inline-flex; align-items: center; gap: 6px; line-height: 1; white-space: nowrap;"
        >
          <img
            alt=""
            aria-hidden="true"
            draggable="false"
            height="24"
            src="/sterling-icon.png"
            style="display: block; flex: 0 0 auto; width: 24px; height: 24px; border-radius: 4px; object-fit: cover;"
            width="24"
          />
          <span
            style="font-size: 24px; font-weight: 650; letter-spacing: 0px;"
          >
            Sterling
          </span>
          <span
            style="padding: 2px 4px; border-radius: 2px; background: var(--dsw-alias-label-primary); color: var(--dsw-alias-label-primary-inverted); font-size: 10px; font-weight: 700; letter-spacing: 0px; line-height: 1.2;"
          >
            HARNESS
          </span>
        </span>
      </button>
      <div
        data-slot="sidebar.brand.action"
        style="display: contents;"
      />
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          style="display: inline-flex; align-items: center; gap: 6px; line-height: 1; white-space: nowrap;"
        >
          <img
            alt=""
            aria-hidden="true"
            draggable="false"
            height="24"
            src="/sterling-icon.png"
            style="display: block; flex: 0 0 auto; width: 24px; height: 24px; border-radius: 4px; object-fit: cover;"
            width="24"
          />
          <span
            style="font-size: 24px; font-weight: 650; letter-spacing: 0px;"
          >
            Sterling
          </span>
          <span
            style="padding: 2px 4px; border-radius: 2px; background: var(--dsw-alias-label-primary); color: var(--dsw-alias-label-primary-inverted); font-size: 10px; font-weight: 700; letter-spacing: 0px; line-height: 1.2;"
          >
            HARNESS
          </span>
        </span>
      </button>
      <div
        data-slot="sidebar.brand.action"
        style="display: contents;"
      />
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
